PF-169: Second part of migration to Timetabledb

--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -39,7 +39,7 @@
                                                 <th class="sort" data-sort="key">Key</th>
                                                 <th class="sort" data-sort="type">Type</th>
                                                 <th class="sort" data-sort="project_id">Scope</th>
-                                                <th class="sort" data-sort="actions">Actions</th>
+                                                <th>Actions</th>
                                             </tr>
                                         </thead>
                                         <tbody class="list">
