--- a/app/templates/home/graphs.html
+++ b/app/templates/home/graphs.html
@@ -47,7 +47,7 @@
                                   <th class="sort" data-sort="height">Height</th>
                                   <th class="sort" data-sort="width">Width</th>
                                   <th class="sort" data-sort="prompt_id">Prompt</th>
-                                  <th class="sort" data-sort="actions">Actions</th>
+                                  <th>Actions</th>
                               </tr>
                           </thead>
                           <tbody class="list">
