--- a/app/templates/home/nfrs.html
+++ b/app/templates/home/nfrs.html
@@ -42,7 +42,7 @@
                                     <tr>
                                         <th class="sort" data-sort="name">Name</th>
                                         <th class="sort" data-sort="nfrs">NFRS</th>
-                                        <th class="sort" data-sort="actions">Actions</th>
+                                        <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody class="list">
