--- a/app/templates/home/prompts.html
+++ b/app/templates/home/prompts.html
@@ -48,7 +48,7 @@
                                   <th class="sort" data-sort="place">Place</th>
                                   <th class="sort" data-sort="type">Type</th>
                                   <th class="sort" data-sort="project_id">Scope</th>
-                                  <th class="sort" data-sort="actions">Actions</th>
+                                  <th>Actions</th>
                               </tr>
                           </thead>
                           <tbody class="list">
