--- a/app/templates/home/templates.html
+++ b/app/templates/home/templates.html
@@ -48,7 +48,7 @@
                                                 <th class="sort" data-sort="template_prompt_id">Template prompt</th>
                                                 <th class="sort" data-sort="aggregated_prompt_id">Aggregated data prompt</th>
                                                 <th class="sort" data-sort="ai-switch">AI Switch</th>
-                                                <th class="sort" data-sort="actions">Actions</th>
+                                                <th>Actions</th>
                                             </tr>
                                         </thead>
                                         <tbody class="list">
@@ -151,7 +151,7 @@
                                                 <th class="sort" data-sort="template">Templates</th>
                                                 <th class="sort" data-sort="prompt_id">Prompt</th>
                                                 <th class="sort" data-sort="ai_summary">AI Switch</th>
-                                                <th class="sort" data-sort="actions">Actions</th>
+                                                <th>Actions</th>
                                             </tr>
                                         </thead>
                                         <tbody class="list">
