PF-169: Added validation for all components

--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Register {% endblock %} 
+{% block title %} Register {% endblock %}
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
                         <span class="input-group-text" id="basic-addon1">
                             <span class="fas fa-user"></span>
                         </span>
-                        {{ form.username(class="form-control") }}
+                        {{ form.user(class="form-control") }}
                     </div>
                     <br />
                     <h4>Password</h4>
