Added auto analysis summary to report page

--- a/app/templates/home/report.html
+++ b/app/templates/home/report.html
@@ -24,19 +24,9 @@
             </div>
             <div class="start-section ms-4 m10-top" style="align-items: normal;">
                 <div class="pr-10 col-lg-6">
-                    <div class="card" style="height: auto; border-left: 4px solid #ffc107;">
-                        <div class="card-header-sm">Performance analysis <span class="fas fa-exclamation-triangle"
-                                style="color: #ffc107;"></span></div>
-                        <div class="card-body">
-                            <p class="mb-0 fs--1">Summary: The performance testing results indicate that the system
-                                shows both strengths and areas for improvement. The key areas for improvement include
-                                response time stability and anomaly detection in throughput and response times.</p>
-                            <p class="mb-0 fs--1">Analysis:</p>
-                            <p class="mb-0 fs--1">- The throughput was generally stable during the test, with a minor
-                                anomaly detected where the metric dropped to 61.27.</p>
-                            <p class="mb-0 fs--1">- The response times, including average, median, and 90th percentile,
-                                were not stable during the test, showing potential increases and anomalies, particularly
-                                during a specific time window.</p>
+                    <div class="card" style="height: auto; border-left: 4px solid #ccc;">
+                        <div class="card-header-sm">Performance analysis</div>
+                        <div class="card-body" id="summaryCard">
                         </div>
                     </div>
                 </div>
